Added css support

--- a/src/layouts/layout.njk
+++ b/src/layouts/layout.njk
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ description }}">
     <meta name="robots" content="index,follow">
     <title>{{ title }}</title>
-    <link href="/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
     {{ content | safe }}
