--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,10 @@
-body {
-    background-color: aqua;
+@import 'blocks/page.css';
+
+:root {
+    --color-text: black;
+    --color-bg: white;
+
+    --font-size: 18px;
+    --line-height: 1.34;
+    --main-column-width: 700px;
 }
