--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body class="page__body">
+        {% include 'header.njk' %}
+
         <main class="page__content">
             {{ content | safe }}
             <ul>
