--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,3 +1,3 @@
 <header class="header">
-    <a href="/" class="header__link">IS</a>
+    <a href="/" class="header__link">Ivan Shalin</a>
 </header>
