--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,12 @@
 ---
 layout: page.njk
-title: Home page
+title: Blog by Ivan Shalin
+isIndex: true
 ---
-
-{{ title }}
-This is Home page
-
-
+<ul>
+    {%- for post in collections.post -%}
+        <li>
+            <a href="{{ post.url }}">{{ post.data.title }}</a>
+        </li>
+    {%- endfor -%}
+</ul>
