--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -6,7 +6,9 @@
         <meta name="keywords" content="{{ keywords }}">
         <meta name="description" content="{{ description }}">
         <meta name="robots" content="index,follow">
-        <title>{{ title }}</title>
+        <title>
+            {{ title }}{% if not isIndex %} | {{ site.title }}{% endif %}
+        </title>
         <link rel="stylesheet" href="/styles/styles.css">
     </head>
     <body class="page__body">
@@ -14,13 +16,6 @@
 
         <main class="page__content">
             {{ content | safe }}
-            <ul>
-                {%- for post in collections.post -%}
-                    <li>
-                        <a href="{{ post.url }}">{{ post.data.title }}</a>
-                    </li>
-                {%- endfor -%}
-            </ul>
         </main>
     </body>
 </html>
