Made header part

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,3 +1,17 @@
 <header class="header">
-    <a href="/" class="header__link">Ivan Shalin</a>
+    <a href="/" class="home-link">
+        <img class="home-link__photo" alt="Ivan Shalin photo" src="/images/photo.header.jpg">
+        <div class="home-link__text">
+            <span itemprop="givenName">Ivan</span>
+            <span itemprop="familyName">Shalin</span>
+        </div>
+    </a>
+
+    <nav class="site-nav">
+        <ul class="site-nav__list">
+            <li class="site-nav__item">
+                <a href="/">Blog</a>
+            </li>
+        </ul>
+    </nav>
 </header>
