--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,7 @@
 @import 'blocks/page.css';
 @import 'blocks/header.css';
+@import 'blocks/home-link.css';
+@import 'blocks/site-nav.css';
 
 :root {
     --color-text: black;
