Added greeting part

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,10 +1,7 @@
 <header class="header">
-    <a href="/" class="home-link">
-        <img class="home-link__photo" alt="Ivan Shalin photo" src="/images/photo.header.jpg">
-        <div class="home-link__text">
-            <span itemprop="givenName">Ivan</span>
-            <span itemprop="familyName">Shalin</span>
-        </div>
+    <a href="/" class="header__home-link">
+        <span itemprop="givenName">Ivan</span>
+        <span itemprop="familyName">Shalin</span>
     </a>
 
     <nav class="site-nav">
