--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -3,6 +3,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: calc(var(--line-space) * 4);
+    height: calc(var(--line-space) * 3);
     grid-column: 2 / span 1;
+    margin-bottom: var(--line-space);
+}
+
+.header__home-link {
+    color: var(--color-text);
+    text-decoration: none;
+    font-size: calc(var(--font-size) * 1.1);
+    font-weight: bold;
 }
