--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,9 @@ layout: page.njk
 title: Blog by Ivan Shalin
 isIndex: true
 ---
+
+{% include 'greeting.njk' %}
+
 <ul>
     {%- for post in collections.post -%}
         <li>
