--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 @import 'blocks/page.css';
 @import 'blocks/header.css';
-@import 'blocks/home-link.css';
 @import 'blocks/site-nav.css';
+@import 'blocks/greeting.css';
 
 :root {
     --color-text: black;
@@ -10,5 +10,6 @@
     --font-size: 18px;
     --line-height: 1.34;
     --line-space: calc(var(--line-height) * 1em);
-    --main-column-width: 700px;
+    --main-column-width: 680px;
+    --mobile-border-width: 15px;
 }
