--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -17,5 +17,7 @@
         <main class="page__content">
             {{ content | safe }}
         </main>
+
+        {% include 'footer.njk' %}
     </body>
 </html>
