--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,14 +2,22 @@
 @import 'blocks/header.css';
 @import 'blocks/site-nav.css';
 @import 'blocks/greeting.css';
+@import 'blocks/footer.css';
 
 :root {
     --color-text: black;
     --color-bg: white;
+    --color-accent: #006efe;
 
     --font-size: 18px;
     --line-height: 1.34;
     --line-space: calc(var(--line-height) * 1em);
     --main-column-width: 680px;
     --mobile-border-width: 15px;
+}
+
+@media (max-width: 600px) {
+    :root {
+        --font-size: 16px;
+    }
 }
