Move posts to blog

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ isIndex: true
 {% include 'greeting.njk' %}
 
 <ul class="articles-list">
-    {%- for post in collections.post -%}
+    {%- for post in collections.blog -%}
         <li class="articles-list__item">
             <article class="article-snippet">
                 <h2 class="article-snippet__title">
