Changed greeting text

--- a/src/includes/greeting.njk
+++ b/src/includes/greeting.njk
@@ -2,6 +2,6 @@
     <img class="greeting__photo" alt="Ivan Shalin photo" src="/images/photo.header.jpg">
     <div class="greeting__text-block">
         <h2 class="greeting__title">Hi, I'm Ivan Shalin</h2>
-        <p class="greeting__text">a frontend developer. It's my blog about technologies which I'm interested in</p>
+        <p class="greeting__text">a frontend developer. It's my personal blog. Here you can find some thoughts about technologies I am working with</p>
     </div>
 </section>
