Base article done

--- a/src/layouts/article.njk
+++ b/src/layouts/article.njk
@@ -2,3 +2,15 @@
 layout: page.njk
 ---
 
+<article class="article">
+    <header class="article__header">
+        <h1 class="article__title">{{ title }}</h1>
+        <div class="article__meta">
+            <time class="article-snippet__datetime" datetime="{{ date.toISOString() }}">{{ date | readableDate}}</time>
+            <div>{{ content | readingTime }} to read</div>
+        </div>
+    </header>
+    <section>
+        {{ content | safe }}
+    </section>
+</article>
